refactor: clean up unused variables, update asset paths and update gallery styling
